bk_ida/gccida/g0/df_bb_reg_use_chain_create
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1853:4: error: expected ';' after expression
rtx insn; // [rsp+38h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1853:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+38h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1855:7: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1855:32: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1855:24: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1855:63: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1855:70: error: use of undeclared identifier 'insn'
for ( insn = bb->head; insn && insn != bb->end[1].fld[0].rtx; insn = insn[1].fld[0].rtx ) 
                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1857:27: error: use of undeclared identifier 'insn'
if ( rtx_class[*( _WORD *)insn] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/df.c:1859:26: error: use of undeclared identifier 'insn'
for ( link = df_0->insns[insn->fld[0].rtuint].uses; link; link = link->next ) 
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_use_chain_create/src/obj/df.o] Error 1
